<resources>
    <string name="app_name">Socially</string>
    <string name="sign_up">Sign Up</string>
    <string name="login">Login</string>
    <string name="activity1"><b>Ibbi</b> liked your post. 3m</string>
    <string name="activity2"><b>JD</b> liked your posts. 10m</string>
    <string name="activity3"><b>Rfy_196</b> started following you. 5h</string>
    <string name="activity4"><b>Abd_Samee</b> commented under your post \"Very nice pics dear\". 2d</string>
    <string name="activity5"><b>Ibbi</b> started following you. 3d</string>
    <string name="chats_title">Chats</string>
    <string name="message_hint">Message...</string>
    <string name="message_empty">Message cannot be empty</string>
    <string name="user_info_missing">User info missing</string>
    <string name="edit_message_title">Edit message</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="delete_confirmation">Delete this message?</string>
    <string name="message_delete_failed">Failed to delete message</string>
    <string name="message_update_failed">Failed to update message</string>
    <string name="message_deleted">Message deleted</string>
    <string name="message_updated">Message updated</string>
    <string name="agora_app_id">caca39104a564ed5b5ee36350148f043</string>
    <string name="chat">Chat</string>
    <string name="end_call">End Call</string>
    <string name="speaker">Speaker</string>
    <string name="profile_picture">Profile Picture</string>
    <string name="calling">Calling...</string>
    <string name="connected">Connected</string>
    <string name="call_ended">Call ended</string>
    <string name="call_duration_default">00:00</string>

</resources>


